--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,7 @@
   src: url("@fonts/WorkSans-VariableFont_wght.ttf") format("truetype");
   font-style: normal;
   font-weight: 400 600 700;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url("@fonts/WorkSans-Italic-VariableFont_wght.ttf") format("truetype");
   font-style: italic;
   font-weight: 400 600 700;
+  font-display: swap;
 }
 
 @tailwind base;
